--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,15 @@ on:
     branches:
       - main
     tags:
-      - 'v*.*.*'
+      - "v*.*.*"
 
 env:
   # Change this to invalidate existing cache.
   CACHE_PREFIX: v0
   PYTHONPATH: ./
+
+permissions:
+  contents: write
 
 jobs:
   checks:
@@ -27,38 +30,38 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: ['3.8', '3.10']
+        python: ["3.8", "3.10"]
         task:
           - name: Test
             run: |
               pytest -v --color=yes tests/
 
         include:
-          - python: '3.10'
+          - python: "3.10"
             task:
               name: Lint
               run: flake8 .
 
-          - python: '3.10'
+          - python: "3.10"
             task:
               name: Type check
               run: mypy .
 
-          - python: '3.10'
+          - python: "3.10"
             task:
               name: Build
               run: |
                 python setup.py check
                 python setup.py bdist_wheel sdist
 
-          - python: '3.10'
+          - python: "3.10"
             task:
               name: Style
               run: |
                 isort --check .
                 black --check .
 
-          - python: '3.10'
+          - python: "3.10"
             task:
               name: Docs
               run: cd docs && make html
@@ -113,7 +116,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Install requirements
         run: |
