--- a/environment.yml
+++ b/environment.yml
@@ -2,93 +2,5 @@ name: metroscore
 channels:
   - defaults
 dependencies:
-  - ca-certificates=2023.01.10=hecd8cb5_0
-  - certifi=2022.12.7=py39hecd8cb5_0
-  - libcxx=14.0.6=h9765a3e_0
-  - libffi=3.4.2=hecd8cb5_6
-  - ncurses=6.4=hcec6c5f_0
-  - openssl=1.1.1t=hca72f7f_0
-  - pip=23.0.1=py39hecd8cb5_0
-  - python=3.9.16=h218abb5_2
-  - readline=8.2=hca72f7f_0
-  - setuptools=65.6.3=py39hecd8cb5_0
-  - sqlite=3.41.1=h6c40b1e_0
-  - tk=8.6.12=h5d9f67b_0
-  - tzdata=2022g=h04d1e81_0
-  - wheel=0.38.4=py39hecd8cb5_0
-  - xz=5.2.10=h6c40b1e_1
-  - zlib=1.2.13=h4dc903c_0
-  - pip:
-    - alabaster==0.7.13
-    - attrs==22.2.0
-    - babel==2.12.1
-    - beautifulsoup4==4.11.2
-    - black==23.1.0
-    - bleach==6.0.0
-    - charset-normalizer==3.1.0
-    - click==8.1.3
-    - click-help-colors==0.9.1
-    - colorama==0.4.6
-    - coverage==7.2.1
-    - docutils==0.19
-    - exceptiongroup==1.1.1
-    - flake8==6.0.0
-    - furo==2022.12.7
-    - idna==3.4
-    - imagesize==1.4.1
-    - importlib-metadata==6.0.0
-    - iniconfig==2.0.0
-    - isort==5.12.0
-    - jaraco-classes==3.2.3
-    - jinja2==3.1.2
-    - keyring==23.13.1
-    - livereload==2.6.3
-    - markdown-it-py==2.2.0
-    - markupsafe==2.1.2
-    - mccabe==0.7.0
-    - mdit-py-plugins==0.3.5
-    - mdurl==0.1.2
-    - metroscore==0.1.0
-    - more-itertools==9.1.0
-    - mypy==1.0.1
-    - mypy-extensions==1.0.0
-    - myst-parser==0.18.1
-    - packaging==23.0
-    - pathspec==0.11.1
-    - pkginfo==1.9.6
-    - platformdirs==3.1.1
-    - pluggy==1.0.0
-    - pycodestyle==2.10.0
-    - pyflakes==3.0.1
-    - pygments==2.14.0
-    - pytest==7.2.2
-    - pytest-cov==4.0.0
-    - pytest-sphinx==0.5.0
-    - pyyaml==6.0
-    - readme-renderer==37.3
-    - requests==2.28.2
-    - requests-toolbelt==0.10.1
-    - rfc3986==2.0.0
-    - rich==13.3.2
-    - six==1.16.0
-    - snowballstemmer==2.2.0
-    - soupsieve==2.4
-    - sphinx==5.3.0
-    - sphinx-autobuild==2021.3.14
-    - sphinx-autodoc-typehints==1.22
-    - sphinx-basic-ng==1.0.0b1
-    - sphinx-copybutton==0.5.1
-    - sphinxcontrib-applehelp==1.0.4
-    - sphinxcontrib-devhelp==1.0.2
-    - sphinxcontrib-htmlhelp==2.0.1
-    - sphinxcontrib-jsmath==1.0.1
-    - sphinxcontrib-qthelp==1.0.3
-    - sphinxcontrib-serializinghtml==1.1.5
-    - tomli==2.0.1
-    - tornado==6.2
-    - twine==4.0.2
-    - typing-extensions==4.5.0
-    - urllib3==1.26.15
-    - webencodings==0.5.1
-    - zipp==3.15.0
+  - python=3.9
 prefix: /Users/arunavgupta/anaconda3/envs/metroscore
