--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,6 +88,7 @@ jobs:
       - name: ${{ matrix.task.name }}
         run: |
           . .venv/bin/activate
+          pip install -r requirements.txt
           ${{ matrix.task.run }}
 
       - name: Upload package distribution files
