--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 # Add your own dependencies to this file.
 numpy==1.24.2
 pandas==2.0.2
+osmnx==1.9.2
+networkx==3.3
+fiona==1.9.6
+geopandas==0.14.3
+shapely==2.0.3
