--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
 # Add your own dependencies to this file.
 numpy==1.24.2
 pandas==2.0.2
+osmnx==1.9.2
+networkx
+fiona
+geopandas
+shapely
+scikit-learn
+matplotlib
+scipy
+geopy
+partridge
