--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,11 +1,16 @@
 version: 2
 
+build:
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.10"
+
+formats: all
+
+python:
+  install:
+    - requirements: docs/requirements.txt
+
 sphinx:
   configuration: docs/source/conf.py
   fail_on_warning: true
-
-python:
-  version: "3.8"
-  install:
-    - requirements: requirements.txt
-    - requirements: dev-requirements.txt
